--- a/info.html
+++ b/info.html
@@ -65,7 +65,7 @@
     <hr>
         <!-- Display the pdf on the page -->
     <h2 class="menu_h2">Latest food menu</h2>
-        <iframe class="menupdf" src="files/Moose Hunt 2022 copy.pdf" frameborder"0"></iframe>
+        <iframe class="menupdf" src="files/Deer Hunt 2023.pdf" frameborder"0"></iframe>
 
         <hr>
         <a href="files/Moose Hunt 2022 copy.pdf" download="">Download PDF</a>
