--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <ul class="header__ul">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="members.html">Members</a></li>
-                    <li><a href="info.html">INFO</a></li>
+                    <li><a href="login.html">INFO</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
@@ -39,7 +39,7 @@
                     <a href="members.html">Members</a>
                 </li>
                 <li>
-                    <a href="info.html">INFO</a>
+                    <a href="login.html">INFO</a>
                 </li>
                 <li>
                     <a href="">About</a>
@@ -87,10 +87,10 @@
 
             <h1 class="about_h1"> Aug. 1970</h1>
             <figure class="camp-build-figure1">
-                <img src="img/Camp_Build_1970_Aug11a_1324x712.jpeg" alt="Camp Build Aug 11, 1970" 
-                title="Camp Build Aug 11, 1970" width="1327" height="712">
+                <img src="img/HCamp1969_2560x1920.JPG" alt="Camp Build 1970" 
+                title="Camp Build Aug 11, 1970" width="2560" height="1920">
                 <figcaption class="offscreen">
-                    Camp Build 1970a
+                    Meeting of the Minds
                 </figcaption>
             </figure>
             <figure class="camp-build-figure2">
