--- a/members.html
+++ b/members.html
@@ -25,7 +25,7 @@
                 <ul class="header__ul">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#members">Members</a></li>
-                    <li><a href="info.html">INFO</a></li>
+                    <li><a href="login.html">INFO</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -39,7 +39,7 @@
                     <a href="#members">Members</a>
                 </li>
                 <li>
-                    <a href="info.html">INFO</a>
+                    <a href="login.html">INFO</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
