--- a/info.html
+++ b/info.html
@@ -57,7 +57,12 @@
         
 
         <!-- info files -->
-         <div class="info_card">
+        <div class="info_card">
+            <h3 class="menu_h2">Important Dates 2024</h2>
+            <a href="files/Licensing Info copy.pdf" target="_blank">View PDF</a>
+        </div>
+        
+        <div class="info_card">
             <h3 class="menu_h2">RHC First Meeting</h2>
             <a href="files/RHC First Meeting.pdf" target="_blank">View PDF</a>
         </div>
